@startuml UML Class Diagram

class Patient {
    +id: Long
}

class Doctor {
    +id: Long
}

class Appointment {
    +id: Long
}

class Room {
    +id: Long
}

class Hospital {
    +id: Long
}

class MedicalHistory {
    +id: Long
}

class Shift {
    +id: Long
}

class User {
    +id: Long
}

class Role {
    +id: Long
}

class AppointmentType {
    +id: Long
}

class AppointmentStatus {
    +id: Long
}

class Specialty {
    +id: Long
}

' Composition relationships
Hospital *-- Room
Room *-- Appointment
Patient *-- MedicalHistory
Doctor *-- Shift

' Association relationships
Patient o-- User
Doctor o-- User
User --> Role
Appointment --> AppointmentType
Appointment --> AppointmentStatus
Doctor --> Specialty
Appointment --> Patient
Appointment --> Doctor
Appointment --> Room
Room --> Hospital
MedicalHistory --> Patient
Shift --> Doctor

@enduml